--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	<title>Karolin Laas</title>
 </head>
 
@@ -17,6 +18,9 @@
 		</div>
 	</section>
 
+		<div class="first_transition">
+		</div>
+
 	<section class="second">
 		<div class="left">
 			<h3>experience and skills</h3>
@@ -27,20 +31,21 @@
 			<h4>university of tartu:</h4>
 			<h5>information management</h5>
 			<br>
-			<h4>i think i am mediocre at:</h4>
+			<h4>i have some experience in</h4>
 			<h5>- html and css</h5>
 			<h5>- figma</h5>
 			<h5>- adobe photoshop</h5>
 			<h5>- adobe illustrator</h5>
-			<h5>- ux testing</h5>
-			<h4>i am a begineer at:</h4>
+			<h5>- prototyping and ux testing</h5>
+			<h4>i am a begineer at</h4>
 			<h5>- javascript</h5>
 			<h5>- Adobe after effects</h5>
 			<h5>- adobe premiere pro</h5>
-			<h4>i also have some experience in</h4>
+			<h4>i also have worked with</h4>
 			<h5>- Microsoft word, excel, powerpoint, outlook
 
 		</div>
+
 	</section>
 
 	<section class="third">
@@ -48,12 +53,12 @@
 			<h3>portfolio</h3>
 		</div>
 		<div class="right">
-				<img src="karolin.jpg" alt="">
-				<img src="karolin.jpg" alt="">
-				<img src="karolin.jpg" alt="">
-				<img src="karolin.jpg" alt="">
-				<img src="karolin.jpg" alt="">
-				<img src="karolin.jpg" alt="">
+				<img id="esimene" src="starship.png" alt="prototype for Starship Deliveries">
+				<img id="teine" src="karolin.jpg" alt="">
+				<img id="kolmas" src="html_css.png" alt="html and css">
+				<img id="neljas" src="wordpress.png" alt="portfolio in wordpress">
+				<img id="viies" src="bootstrap.png" alt="bootstrap">
+				<img id="kuues" src="graphic_design.svg" alt="graphic design">
 		</div>
 	</section>
 
